# rbiotechsalary_etl

./: .gitignore  BADAI.md  DEPLOYMENT_CHECKLIST.md  README.md  SCHEMA.md  SERVING_DATA.md  dbt_project.yml  export_parquet.py  package-lock.yml  packages.yml  pyproject.toml
.github/workflows/: export-parquet.yml
data/: r_biotech salary and company survey - 2025.csv  sanitized.csv
data/raw/: src_responses_2022.csv  src_responses_2023.csv  src_responses_2024.csv  src_responses_2025.csv  src_responses_2026.csv
docs/: index-csv.html  index.html
docs/data/: dim_companies.parquet  dim_job_titles.parquet  dim_jobs.parquet  dim_locations.parquet  fct_salaries.parquet  responses.parquet
macros/: clean_numeric.sql  normalize_job_title.sql  parse_first_number.sql
models/: companies.md  jobs.md  locations.md  overview.md  response_id.md  salaries.md  stg_survey_results__raw_responses.sql
models/marts/: _dim_companies.yml  _dim_jobs.yml  _dim_locations.yml  _fct_salaries.yml  dim_companies.sql  dim_job_titles.sql  dim_jobs.sql  dim_locations.sql  fct_responses.sql  fct_salaries.sql
models/marts/analytics/: _responses.yml  responses.md  responses.sql
models/staging/survey_results/: _src_survey_results.yml  _stg_responses.sql  (+8 more)
scripts/: codegen.sh  create_job_titles_seed.py  extract.py  sanitize_headers.py  trim.py
seeds/: _seeds.yml  city_names.csv  company_names.csv  countries.csv  country_currencies.csv  country_names.csv  currency_names.csv  job_functions.csv  job_hierarchy.csv  job_titles.csv  region_countries.csv  seniority_levels.csv  subdivisions.csv
