[project]
name = "rbiotechsalary-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.11.6",
    "dbt-databricks>=1.11.5",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pandas>=2.2.0",
    "polars>=1.38.1",
]
